@startuml
package moteurJeu{
    class MoteurJeu {
        -<static> width : double
        -<static> height : double
        -<static> FPS : int
        +<static> launch(jeu : Jeu, dessin : DessinJeu)
        +<static> setTaille(width : double, height : double)
        +<static> setFPS(fps : int)
        +start(primaryStage : Stage)
        +startAnimation(canvas : Canvas)
    }
    
    interface Jeu {
        +update(secondes : double, clavier : Clavier)
        +init()
        +etreFini()
    }
    
    interface DessinJeu {
        +dessinerJeu(jeu : Jeu, canvas : Canvas)
    }
    
    class Clavier {
        -haut : boolean
        -bas : boolean
        -gauche : boolean
        -droite : boolean
        +appuyerTouche(event : KeyEvent)
        +relacherTouche(event : KeyEvent)
    }
}

package gameLaby{
    class LabyJeu {
        -labyrinthe : Labyrinthe
        +LabyJeu()
        +update(secondes : double, clavier : Clavier)
        +getLabyrinthe() : Labyrinthe
        +init()
        +etreFini() : boolean
    }
    
    class Labyrinthe {
        -murs : boolean[][]
        -pj : Perso
        -<static> MUR : char = 'X'
        -<static> PJ : char = 'P'
        -<static> VIDE : char = '.'
        -<static> HAUT : String = 'Haut'
        -<static> BAS : String = 'Bas'
        -<static> GAUCHE : String = 'Gauche'
        -<static> DROITE : String = 'Droite'
        +getSuivant(x : int, y : int, action : String) : int
        +deplacerPerso(action : String)
        +etreFini() : boolean
        +getLengthY() : int
        +getLength() : int
        +getMur(x : int, y : int) : boolean
    }
    
    class Perso {
        -x : int
        -y : int
        +Perso(dx : int, dy : int)
        +etrePresent(int dx, int dy) : boolean
        +getX() : int
        +getY() : int
    }
    
    
    class LabyDessin {
        +dessinerJeu(jeu : Jeu, canvas : Canvas)
    }
}

MoteurJeu "1" --> "1" Jeu : -<static> jeu
MoteurJeu "1" --> "1" DessinJeu : -<static> dessin
Jeu <|-- LabyJeu
LabyJeu --> Labyrinthe
Labyrinthe --> Perso
DessinJeu <|-- LabyDessin
LabyDessin --> Labyrinthe
MoteurJeu "1" --> "1" Clavier : -clavier
@enduml